--- a/index.html
+++ b/index.html
@@ -370,6 +370,361 @@ summary {
 <div id="practice-results" class="section level1 tabset">
 <h1>Practice Results</h1>
 <div id="section" class="section level2">
+<h2>9/5/2020</h2>
+<div id="mock-race-1" class="section level3">
+<h3>Mock Race 1</h3>
+<ul>
+<li>Men: 8k</li>
+<li>Women: 5k</li>
+<li>Legacy Trail: Paved</li>
+<li>Sunny, 60 degrees</li>
+</ul>
+<p>Courses may have been 5-10 seconds short.</p>
+<p>Women Top 5 Average: 20:06 Women 1-5 Split: 1:21 Men Avg Time Record Since I started coaching: 20:29 Men Avg Time Record All Time: 19:31</p>
+<p>Men Top 5 Average: 27:34 Men 1-5 Split: 58 seconds Men Avg Time Record Since I started coaching: 28:29 Men Avg Time Record All Time: 27:21</p>
+<div id="results" class="section level4">
+<h4>Results</h4>
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Sat Sep 05 12:02:03 2020 -->
+<table border="1">
+<tr>
+<th>
+Name
+</th>
+<th>
+1st Half
+</th>
+<th>
+2nd Half
+</th>
+<th>
+Finish
+</th>
+<th>
+Pace
+</th>
+</tr>
+<tr>
+<td>
+Jodie
+</td>
+<td>
+09:28
+</td>
+<td>
+10:02
+</td>
+<td>
+19:30
+</td>
+<td>
+06:17
+</td>
+</tr>
+<tr>
+<td>
+Avery
+</td>
+<td>
+09:48
+</td>
+<td>
+09:54
+</td>
+<td>
+19:42
+</td>
+<td>
+06:21
+</td>
+</tr>
+<tr>
+<td>
+Kate
+</td>
+<td>
+09:48
+</td>
+<td>
+09:54
+</td>
+<td>
+19:42
+</td>
+<td>
+06:21
+</td>
+</tr>
+<tr>
+<td>
+Manny
+</td>
+<td>
+10:10
+</td>
+<td>
+10:37
+</td>
+<td>
+20:47
+</td>
+<td>
+06:42
+</td>
+</tr>
+<tr>
+<td>
+Sarah
+</td>
+<td>
+10:18
+</td>
+<td>
+10:33
+</td>
+<td>
+20:51
+</td>
+<td>
+06:44
+</td>
+</tr>
+<tr>
+<td>
+Ellie
+</td>
+<td>
+11:06
+</td>
+<td>
+11:35
+</td>
+<td>
+22:41
+</td>
+<td>
+07:19
+</td>
+</tr>
+<tr>
+<td>
+India
+</td>
+<td>
+12:55
+</td>
+<td>
+13:40
+</td>
+<td>
+26:35
+</td>
+<td>
+08:35
+</td>
+</tr>
+<tr>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Nick
+</td>
+<td>
+13:45
+</td>
+<td>
+13:24
+</td>
+<td>
+27:09
+</td>
+<td>
+05:28
+</td>
+</tr>
+<tr>
+<td>
+Harrison
+</td>
+<td>
+13:45
+</td>
+<td>
+13:43
+</td>
+<td>
+27:28
+</td>
+<td>
+05:32
+</td>
+</tr>
+<tr>
+<td>
+Jax
+</td>
+<td>
+13:45
+</td>
+<td>
+13:46
+</td>
+<td>
+27:31
+</td>
+<td>
+05:32
+</td>
+</tr>
+<tr>
+<td>
+Ben
+</td>
+<td>
+13:45
+</td>
+<td>
+13:50
+</td>
+<td>
+27:35
+</td>
+<td>
+05:33
+</td>
+</tr>
+<tr>
+<td>
+Brad
+</td>
+<td>
+13:55
+</td>
+<td>
+14:12
+</td>
+<td>
+28:07
+</td>
+<td>
+05:39
+</td>
+</tr>
+<tr>
+<td>
+Ike
+</td>
+<td>
+14:10
+</td>
+<td>
+13:58
+</td>
+<td>
+28:08
+</td>
+<td>
+05:40
+</td>
+</tr>
+<tr>
+<td>
+Justin
+</td>
+<td>
+14:44
+</td>
+<td>
+14:40
+</td>
+<td>
+29:24
+</td>
+<td>
+05:55
+</td>
+</tr>
+<tr>
+<td>
+Blake
+</td>
+<td>
+16:01
+</td>
+<td>
+15:43
+</td>
+<td>
+31:44
+</td>
+<td>
+06:23
+</td>
+</tr>
+<tr>
+<td>
+Wes
+</td>
+<td>
+16:25
+</td>
+<td>
+16:57
+</td>
+<td>
+33:22
+</td>
+<td>
+06:43
+</td>
+</tr>
+<tr>
+<td>
+Hayden
+</td>
+<td>
+17:06
+</td>
+<td>
+17:07
+</td>
+<td>
+34:13
+</td>
+<td>
+06:53
+</td>
+</tr>
+<tr>
+<td>
+Wyatt
+</td>
+<td>
+13:45
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+05:32
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div id="section-1" class="section level2">
 <h2>9/2/2020</h2>
 <div id="workout" class="section level3">
 <h3>Workout</h3>
@@ -381,7 +736,7 @@ summary {
 <div id="unadjusted-results" class="section level4">
 <h4>Unadjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:56 2020 -->
+<!-- Sat Sep 05 12:02:03 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1049,7 +1404,7 @@ White
 <div id="adjusted-results" class="section level4">
 <h4>Adjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:56 2020 -->
+<!-- Sat Sep 05 12:02:03 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1716,7 +2071,7 @@ White
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>8/31/2020</h2>
 <div id="workout-1" class="section level3">
 <h3>Workout</h3>
@@ -1728,7 +2083,7 @@ White
 <div id="men-and-women" class="section level4">
 <h4>Men and Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:56 2020 -->
+<!-- Sat Sep 05 12:02:03 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2421,7 +2776,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>8/26/2020</h2>
 <div id="workout-2" class="section level3">
 <h3>Workout</h3>
@@ -2434,7 +2789,7 @@ Pugh
 <div id="men" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:56 2020 -->
+<!-- Sat Sep 05 12:02:03 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2888,7 +3243,7 @@ Sheroan
 <div id="women" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:56 2020 -->
+<!-- Sat Sep 05 12:02:03 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3444,7 +3799,7 @@ Stanko
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>8/24/2020</h2>
 <div id="workout-3" class="section level3">
 <h3>Workout</h3>
@@ -3457,7 +3812,7 @@ Stanko
 <div id="men-1" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:57 2020 -->
+<!-- Sat Sep 05 12:02:04 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3783,7 +4138,7 @@ Sheroan
 <div id="women-1" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:57 2020 -->
+<!-- Sat Sep 05 12:02:04 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4065,7 +4420,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-5" class="section level2">
 <h2>8/19/2020</h2>
 <div id="fartlek-run" class="section level3">
 <h3>Fartlek Run</h3>
@@ -4078,7 +4433,7 @@ Pugh
 </ul>
 </div>
 </div>
-<div id="section-5" class="section level2">
+<div id="section-6" class="section level2">
 <h2>8/17/2020</h2>
 <div id="threshold-run" class="section level3">
 <h3>Threshold Run</h3>
@@ -4088,7 +4443,7 @@ Pugh
 <div id="men-5.04-miles" class="section level4">
 <h4>Men: 5.04 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:57 2020 -->
+<!-- Sat Sep 05 12:02:04 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4638,7 +4993,7 @@ Steeley
 <div id="women-3.03-miles" class="section level4">
 <h4>Women: 3.03 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Thu Sep 03 20:07:57 2020 -->
+<!-- Sat Sep 05 12:02:04 2020 -->
 <table border="1">
 <tr>
 <th>
