--- a/index.html
+++ b/index.html
@@ -380,12 +380,20 @@ summary {
 <li>Sunny, 60 degrees</li>
 </ul>
 <p>Courses may have been 5-10 seconds short.</p>
-<p>Women Top 5 Average: 20:06 Women 1-5 Split: 1:21 Men Avg Time Record Since I started coaching: 20:29 Men Avg Time Record All Time: 19:31</p>
-<p>Men Top 5 Average: 27:34 Men 1-5 Split: 58 seconds Men Avg Time Record Since I started coaching: 28:29 Men Avg Time Record All Time: 27:21</p>
+<ul>
+<li><p>Women Top 5 Average: 20:06</p></li>
+<li><p>Women 1-5 Split: 1:21</p></li>
+<li><p>Men Avg Time Record Since I started coaching: 20:29</p></li>
+<li><p>Men Avg Time Record All Time: 19:31</p></li>
+<li><p>Men Top 5 Average: 27:34</p></li>
+<li><p>Men 1-5 Split: 58 seconds</p></li>
+<li><p>Men Avg Time Record Since I started coaching: 28:29</p></li>
+<li><p>Men Avg Time Record All Time: 27:21</p></li>
+</ul>
 <div id="results" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:03 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -736,7 +744,7 @@ Wyatt
 <div id="unadjusted-results" class="section level4">
 <h4>Unadjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:03 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1404,7 +1412,7 @@ White
 <div id="adjusted-results" class="section level4">
 <h4>Adjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:03 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2083,7 +2091,7 @@ White
 <div id="men-and-women" class="section level4">
 <h4>Men and Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:03 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2789,7 +2797,7 @@ Pugh
 <div id="men" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:03 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3243,7 +3251,7 @@ Sheroan
 <div id="women" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:03 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3812,7 +3820,7 @@ Stanko
 <div id="men-1" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:04 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4138,7 +4146,7 @@ Sheroan
 <div id="women-1" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:04 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4443,7 +4451,7 @@ Pugh
 <div id="men-5.04-miles" class="section level4">
 <h4>Men: 5.04 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:04 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4993,7 +5001,7 @@ Steeley
 <div id="women-3.03-miles" class="section level4">
 <h4>Women: 3.03 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:02:04 2020 -->
+<!-- Sat Sep 05 12:08:25 2020 -->
 <table border="1">
 <tr>
 <th>
