--- a/index.html
+++ b/index.html
@@ -370,6 +370,573 @@ summary {
 <div id="practice-results" class="section level1 tabset">
 <h1>Practice Results</h1>
 <div id="section" class="section level2">
+<h2>9/7/2020</h2>
+<div id="practice-scott-co.-park" class="section level3">
+<h3>Practice: Scott Co. Park</h3>
+<ul>
+<li>Men: 4 x 3 laps new hill, 5 old hill sprints</li>
+<li>Women: 3 x 3 laps new hills, 3 old hill sprints</li>
+<li>88 Degrees</li>
+<li>“Last Year” is the average for last years workout. Men did 3 sets, women did 2 sets.</li>
+</ul>
+<div id="results" class="section level4">
+<h4>Results</h4>
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Mon Sep 07 21:34:29 2020 -->
+<table border="1">
+<tr>
+<th>
+First
+</th>
+<th>
+Last
+</th>
+<th>
+1
+</th>
+<th>
+2
+</th>
+<th>
+3
+</th>
+<th>
+4
+</th>
+<th>
+Avg
+</th>
+<th>
+Last Year
+</th>
+</tr>
+<tr>
+<td>
+Jax
+</td>
+<td>
+Downs
+</td>
+<td>
+05:29
+</td>
+<td>
+05:32
+</td>
+<td>
+05:42
+</td>
+<td>
+05:33
+</td>
+<td>
+05:34
+</td>
+<td>
+05:59
+</td>
+</tr>
+<tr>
+<td>
+Ben
+</td>
+<td>
+Kinsey
+</td>
+<td>
+05:29
+</td>
+<td>
+05:40
+</td>
+<td>
+05:45
+</td>
+<td>
+05:40
+</td>
+<td>
+05:39
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Nick
+</td>
+<td>
+Clark
+</td>
+<td>
+05:27
+</td>
+<td>
+05:32
+</td>
+<td>
+05:54
+</td>
+<td>
+05:57
+</td>
+<td>
+05:42
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Ike
+</td>
+<td>
+Madding
+</td>
+<td>
+05:40
+</td>
+<td>
+05:51
+</td>
+<td>
+06:00
+</td>
+<td>
+05:45
+</td>
+<td>
+05:49
+</td>
+<td>
+06:08
+</td>
+</tr>
+<tr>
+<td>
+Justin
+</td>
+<td>
+Tavner
+</td>
+<td>
+05:51
+</td>
+<td>
+05:59
+</td>
+<td>
+06:03
+</td>
+<td>
+05:52
+</td>
+<td>
+05:56
+</td>
+<td>
+06:42
+</td>
+</tr>
+<tr>
+<td>
+Brad
+</td>
+<td>
+Perkins
+</td>
+<td>
+05:45
+</td>
+<td>
+06:02
+</td>
+<td>
+06:10
+</td>
+<td>
+05:59
+</td>
+<td>
+05:59
+</td>
+<td>
+06:09
+</td>
+</tr>
+<tr>
+<td>
+Harrison
+</td>
+<td>
+Booher
+</td>
+<td>
+05:55
+</td>
+<td>
+06:20
+</td>
+<td>
+06:45
+</td>
+<td>
+06:18
+</td>
+<td>
+06:20
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Blake
+</td>
+<td>
+Borwig
+</td>
+<td>
+06:22
+</td>
+<td>
+06:20
+</td>
+<td>
+06:30
+</td>
+<td>
+06:18
+</td>
+<td>
+06:22
+</td>
+<td>
+06:13
+</td>
+</tr>
+<tr>
+<td>
+Noah
+</td>
+<td>
+Steeley
+</td>
+<td>
+06:30
+</td>
+<td>
+06:43
+</td>
+<td>
+06:43
+</td>
+<td>
+06:44
+</td>
+<td>
+06:40
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Wes
+</td>
+<td>
+Qualls
+</td>
+<td>
+06:30
+</td>
+<td>
+06:43
+</td>
+<td>
+06:39
+</td>
+<td>
+06:50
+</td>
+<td>
+06:40
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Hayden
+</td>
+<td>
+Sheroan
+</td>
+<td>
+06:43
+</td>
+<td>
+07:10
+</td>
+<td>
+07:33
+</td>
+<td>
+07:33
+</td>
+<td>
+07:15
+</td>
+<td>
+07:12
+</td>
+</tr>
+<tr>
+<td>
+Rachel
+</td>
+<td>
+Puckett
+</td>
+<td>
+06:38
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+06:38
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Avery
+</td>
+<td>
+Renner
+</td>
+<td>
+06:43
+</td>
+<td>
+06:38
+</td>
+<td>
+06:39
+</td>
+<td>
+</td>
+<td>
+06:40
+</td>
+<td>
+07:59
+</td>
+</tr>
+<tr>
+<td>
+Jodie
+</td>
+<td>
+Smith
+</td>
+<td>
+06:38
+</td>
+<td>
+06:59
+</td>
+<td>
+06:52
+</td>
+<td>
+</td>
+<td>
+06:50
+</td>
+<td>
+07:32
+</td>
+</tr>
+<tr>
+<td>
+Kate
+</td>
+<td>
+Reese
+</td>
+<td>
+06:38
+</td>
+<td>
+06:53
+</td>
+<td>
+07:10
+</td>
+<td>
+</td>
+<td>
+06:54
+</td>
+<td>
+07:30
+</td>
+</tr>
+<tr>
+<td>
+Manny
+</td>
+<td>
+Stovik
+</td>
+<td>
+06:59
+</td>
+<td>
+07:16
+</td>
+<td>
+07:16
+</td>
+<td>
+</td>
+<td>
+07:10
+</td>
+<td>
+07:30
+</td>
+</tr>
+<tr>
+<td>
+Katie
+</td>
+<td>
+Milby
+</td>
+<td>
+07:03
+</td>
+<td>
+07:17
+</td>
+<td>
+07:14
+</td>
+<td>
+</td>
+<td>
+07:11
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Sarah
+</td>
+<td>
+Bailey
+</td>
+<td>
+07:09
+</td>
+<td>
+07:24
+</td>
+<td>
+07:29
+</td>
+<td>
+</td>
+<td>
+07:21
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Virginia
+</td>
+<td>
+White
+</td>
+<td>
+07:25
+</td>
+<td>
+08:00
+</td>
+<td>
+07:53
+</td>
+<td>
+</td>
+<td>
+07:46
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Ellie
+</td>
+<td>
+Stanko
+</td>
+<td>
+07:42
+</td>
+<td>
+07:53
+</td>
+<td>
+08:02
+</td>
+<td>
+</td>
+<td>
+07:52
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Riley
+</td>
+<td>
+Davis
+</td>
+<td>
+07:44
+</td>
+<td>
+</td>
+<td>
+08:28
+</td>
+<td>
+</td>
+<td>
+08:06
+</td>
+<td>
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div id="section-1" class="section level2">
 <h2>9/5/2020</h2>
 <div id="mock-race-1" class="section level3">
 <h3>Mock Race 1</h3>
@@ -390,10 +957,10 @@ summary {
 <li><p>Men Avg Time Record Since I started coaching: 28:29</p></li>
 <li><p>Men Avg Time Record All Time: 27:21</p></li>
 </ul>
-<div id="results" class="section level4">
+<div id="results-1" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -732,7 +1299,7 @@ Wyatt
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>9/2/2020</h2>
 <div id="workout" class="section level3">
 <h3>Workout</h3>
@@ -744,7 +1311,7 @@ Wyatt
 <div id="unadjusted-results" class="section level4">
 <h4>Unadjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1412,7 +1979,7 @@ White
 <div id="adjusted-results" class="section level4">
 <h4>Adjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2079,7 +2646,7 @@ White
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>8/31/2020</h2>
 <div id="workout-1" class="section level3">
 <h3>Workout</h3>
@@ -2091,7 +2658,7 @@ White
 <div id="men-and-women" class="section level4">
 <h4>Men and Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2784,7 +3351,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>8/26/2020</h2>
 <div id="workout-2" class="section level3">
 <h3>Workout</h3>
@@ -2797,7 +3364,7 @@ Pugh
 <div id="men" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3251,7 +3818,7 @@ Sheroan
 <div id="women" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3807,7 +4374,7 @@ Stanko
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-5" class="section level2">
 <h2>8/24/2020</h2>
 <div id="workout-3" class="section level3">
 <h3>Workout</h3>
@@ -3820,7 +4387,7 @@ Stanko
 <div id="men-1" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4146,7 +4713,7 @@ Sheroan
 <div id="women-1" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4428,7 +4995,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-5" class="section level2">
+<div id="section-6" class="section level2">
 <h2>8/19/2020</h2>
 <div id="fartlek-run" class="section level3">
 <h3>Fartlek Run</h3>
@@ -4441,7 +5008,7 @@ Pugh
 </ul>
 </div>
 </div>
-<div id="section-6" class="section level2">
+<div id="section-7" class="section level2">
 <h2>8/17/2020</h2>
 <div id="threshold-run" class="section level3">
 <h3>Threshold Run</h3>
@@ -4451,7 +5018,7 @@ Pugh
 <div id="men-5.04-miles" class="section level4">
 <h4>Men: 5.04 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5001,7 +5568,7 @@ Steeley
 <div id="women-3.03-miles" class="section level4">
 <h4>Women: 3.03 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Sat Sep 05 12:08:25 2020 -->
+<!-- Mon Sep 07 21:34:29 2020 -->
 <table border="1">
 <tr>
 <th>
