--- a/index.html
+++ b/index.html
@@ -370,6 +370,675 @@ summary {
 <div id="practice-results" class="section level1 tabset">
 <h1>Practice Results</h1>
 <div id="section" class="section level2">
+<h2>9/15/2020</h2>
+<div id="practice-park" class="section level3">
+<h3>Practice: Park</h3>
+<ul>
+<li>Men: 3x2mile, 4 min rest</li>
+<li>Women: 2x2mile, 4 min rest.</li>
+<li>5:30pm, 75 Degrees</li>
+<li>Each lap was 2.0167 miles</li>
+</ul>
+<div id="results" class="section level4">
+<h4>Results</h4>
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Tue Sep 15 07:53:21 2020 -->
+<table border="1">
+<tr>
+<th>
+First
+</th>
+<th>
+Last
+</th>
+<th>
+1
+</th>
+<th>
+2
+</th>
+<th>
+3
+</th>
+<th>
+Total
+</th>
+<th>
+Avg
+</th>
+<th>
+Pace
+</th>
+</tr>
+<tr>
+<td>
+Jax
+</td>
+<td>
+Downs
+</td>
+<td>
+11:11
+</td>
+<td>
+10:58
+</td>
+<td>
+11:09
+</td>
+<td>
+33:18
+</td>
+<td>
+11:06
+</td>
+<td>
+05:30
+</td>
+</tr>
+<tr>
+<td>
+Nick
+</td>
+<td>
+Clark
+</td>
+<td>
+11:03
+</td>
+<td>
+10:58
+</td>
+<td>
+11:21
+</td>
+<td>
+33:22
+</td>
+<td>
+11:07
+</td>
+<td>
+05:31
+</td>
+</tr>
+<tr>
+<td>
+Ben
+</td>
+<td>
+Kinsey
+</td>
+<td>
+11:05
+</td>
+<td>
+11:22
+</td>
+<td>
+11:32
+</td>
+<td>
+33:59
+</td>
+<td>
+11:20
+</td>
+<td>
+05:37
+</td>
+</tr>
+<tr>
+<td>
+Wyatt
+</td>
+<td>
+Gatewood
+</td>
+<td>
+11:27
+</td>
+<td>
+</td>
+<td>
+11:22
+</td>
+<td>
+22:49
+</td>
+<td>
+11:24
+</td>
+<td>
+05:39
+</td>
+</tr>
+<tr>
+<td>
+Justin
+</td>
+<td>
+Tavner
+</td>
+<td>
+11:41
+</td>
+<td>
+11:47
+</td>
+<td>
+11:47
+</td>
+<td>
+35:15
+</td>
+<td>
+11:45
+</td>
+<td>
+05:50
+</td>
+</tr>
+<tr>
+<td>
+Brad
+</td>
+<td>
+Perkins
+</td>
+<td>
+11:53
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+11:53
+</td>
+<td>
+11:53
+</td>
+<td>
+05:54
+</td>
+</tr>
+<tr>
+<td>
+Ike
+</td>
+<td>
+Madding
+</td>
+<td>
+11:59
+</td>
+<td>
+12:12
+</td>
+<td>
+12:08
+</td>
+<td>
+36:19
+</td>
+<td>
+12:06
+</td>
+<td>
+06:00
+</td>
+</tr>
+<tr>
+<td>
+Harrison
+</td>
+<td>
+Booher
+</td>
+<td>
+11:39
+</td>
+<td>
+12:50
+</td>
+<td>
+13:13
+</td>
+<td>
+37:42
+</td>
+<td>
+12:34
+</td>
+<td>
+06:14
+</td>
+</tr>
+<tr>
+<td>
+Noah
+</td>
+<td>
+Steeley
+</td>
+<td>
+13:01
+</td>
+<td>
+13:21
+</td>
+<td>
+</td>
+<td>
+26:22
+</td>
+<td>
+13:11
+</td>
+<td>
+06:32
+</td>
+</tr>
+<tr>
+<td>
+Blake
+</td>
+<td>
+Borwig
+</td>
+<td>
+13:37
+</td>
+<td>
+13:30
+</td>
+<td>
+13:30
+</td>
+<td>
+40:37
+</td>
+<td>
+13:32
+</td>
+<td>
+06:43
+</td>
+</tr>
+<tr>
+<td>
+Wes
+</td>
+<td>
+Qualls
+</td>
+<td>
+13:37
+</td>
+<td>
+13:35
+</td>
+<td>
+14:15
+</td>
+<td>
+41:27
+</td>
+<td>
+13:49
+</td>
+<td>
+06:51
+</td>
+</tr>
+<tr>
+<td>
+Hayden
+</td>
+<td>
+Sheroan
+</td>
+<td>
+14:09
+</td>
+<td>
+15:05
+</td>
+<td>
+15:22
+</td>
+<td>
+44:36
+</td>
+<td>
+14:52
+</td>
+<td>
+07:22
+</td>
+</tr>
+<tr>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Jodie
+</td>
+<td>
+Smith
+</td>
+<td>
+13:18
+</td>
+<td>
+13:32
+</td>
+<td>
+</td>
+<td>
+26:50
+</td>
+<td>
+13:25
+</td>
+<td>
+06:39
+</td>
+</tr>
+<tr>
+<td>
+Rachel
+</td>
+<td>
+Puckett
+</td>
+<td>
+13:18
+</td>
+<td>
+06:54
+</td>
+<td>
+</td>
+<td>
+20:12
+</td>
+<td>
+</td>
+<td>
+06:41
+</td>
+</tr>
+<tr>
+<td>
+Maddie
+</td>
+<td>
+Waltmon
+</td>
+<td>
+13:56
+</td>
+<td>
+14:08
+</td>
+<td>
+</td>
+<td>
+28:04
+</td>
+<td>
+14:02
+</td>
+<td>
+06:58
+</td>
+</tr>
+<tr>
+<td>
+Kate
+</td>
+<td>
+Reese
+</td>
+<td>
+13:53
+</td>
+<td>
+14:17
+</td>
+<td>
+</td>
+<td>
+28:10
+</td>
+<td>
+14:05
+</td>
+<td>
+06:59
+</td>
+</tr>
+<tr>
+<td>
+Manny
+</td>
+<td>
+Stovik
+</td>
+<td>
+14:04
+</td>
+<td>
+14:15
+</td>
+<td>
+</td>
+<td>
+28:19
+</td>
+<td>
+14:09
+</td>
+<td>
+07:01
+</td>
+</tr>
+<tr>
+<td>
+Avery
+</td>
+<td>
+Renner
+</td>
+<td>
+14:00
+</td>
+<td>
+14:28
+</td>
+<td>
+</td>
+<td>
+28:28
+</td>
+<td>
+14:14
+</td>
+<td>
+07:03
+</td>
+</tr>
+<tr>
+<td>
+Katie
+</td>
+<td>
+Milby
+</td>
+<td>
+14:16
+</td>
+<td>
+14:22
+</td>
+<td>
+</td>
+<td>
+28:38
+</td>
+<td>
+14:19
+</td>
+<td>
+07:06
+</td>
+</tr>
+<tr>
+<td>
+Sarah
+</td>
+<td>
+Bailey
+</td>
+<td>
+14:26
+</td>
+<td>
+14:35
+</td>
+<td>
+</td>
+<td>
+29:01
+</td>
+<td>
+14:30
+</td>
+<td>
+07:12
+</td>
+</tr>
+<tr>
+<td>
+Lan
+</td>
+<td>
+Jackson
+</td>
+<td>
+15:14
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+15:14
+</td>
+<td>
+15:14
+</td>
+<td>
+07:33
+</td>
+</tr>
+<tr>
+<td>
+Riley
+</td>
+<td>
+Davis
+</td>
+<td>
+15:25
+</td>
+<td>
+15:24
+</td>
+<td>
+</td>
+<td>
+30:49
+</td>
+<td>
+15:24
+</td>
+<td>
+07:38
+</td>
+</tr>
+<tr>
+<td>
+Virginia
+</td>
+<td>
+White
+</td>
+<td>
+15:11
+</td>
+<td>
+15:50
+</td>
+<td>
+</td>
+<td>
+31:01
+</td>
+<td>
+15:31
+</td>
+<td>
+07:41
+</td>
+</tr>
+<tr>
+<td>
+Ellie
+</td>
+<td>
+Stanko
+</td>
+<td>
+15:24
+</td>
+<td>
+16:13
+</td>
+<td>
+</td>
+<td>
+31:37
+</td>
+<td>
+15:48
+</td>
+<td>
+07:50
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div id="section-1" class="section level2">
 <h2>9/9/2020</h2>
 <div id="practice-east-campus" class="section level3">
 <h3>Practice: East Campus</h3>
@@ -379,10 +1048,10 @@ summary {
 <li>6:30am, 66 Degrees</li>
 <li>Each Interval was 1020m, which is about 0.63 miles. This column is a slightly adjusted average to account for this.</li>
 </ul>
-<div id="results" class="section level4">
+<div id="results-1" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1351,7 +2020,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>9/7/2020</h2>
 <div id="practice-scott-co.-park" class="section level3">
 <h3>Practice: Scott Co. Park</h3>
@@ -1361,10 +2030,10 @@ Pugh
 <li>88 Degrees</li>
 <li>“Last Year” is the average for last years workout. Men did 3 sets, women did 2 sets.</li>
 </ul>
-<div id="results-1" class="section level4">
+<div id="results-2" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1918,7 +2587,7 @@ Davis
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>9/5/2020</h2>
 <div id="mock-race-1" class="section level3">
 <h3>Mock Race 1</h3>
@@ -1939,10 +2608,10 @@ Davis
 <li><p>Men Avg Time Record Since I started coaching: 28:29</p></li>
 <li><p>Men Avg Time Record All Time: 27:21</p></li>
 </ul>
-<div id="results-2" class="section level4">
+<div id="results-3" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2281,7 +2950,7 @@ Wyatt
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>9/2/2020</h2>
 <div id="workout" class="section level3">
 <h3>Workout</h3>
@@ -2293,7 +2962,7 @@ Wyatt
 <div id="unadjusted-results" class="section level4">
 <h4>Unadjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2961,7 +3630,7 @@ White
 <div id="adjusted-results" class="section level4">
 <h4>Adjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3628,7 +4297,7 @@ White
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-5" class="section level2">
 <h2>8/31/2020</h2>
 <div id="workout-1" class="section level3">
 <h3>Workout</h3>
@@ -3640,7 +4309,7 @@ White
 <div id="men-and-women" class="section level4">
 <h4>Men and Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4333,7 +5002,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-5" class="section level2">
+<div id="section-6" class="section level2">
 <h2>8/26/2020</h2>
 <div id="workout-2" class="section level3">
 <h3>Workout</h3>
@@ -4346,7 +5015,7 @@ Pugh
 <div id="men" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4800,7 +5469,7 @@ Sheroan
 <div id="women" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5356,7 +6025,7 @@ Stanko
 </div>
 </div>
 </div>
-<div id="section-6" class="section level2">
+<div id="section-7" class="section level2">
 <h2>8/24/2020</h2>
 <div id="workout-3" class="section level3">
 <h3>Workout</h3>
@@ -5369,7 +6038,7 @@ Stanko
 <div id="men-1" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:21 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5695,7 +6364,7 @@ Sheroan
 <div id="women-1" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:22 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5977,7 +6646,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-7" class="section level2">
+<div id="section-8" class="section level2">
 <h2>8/19/2020</h2>
 <div id="fartlek-run" class="section level3">
 <h3>Fartlek Run</h3>
@@ -5990,7 +6659,7 @@ Pugh
 </ul>
 </div>
 </div>
-<div id="section-8" class="section level2">
+<div id="section-9" class="section level2">
 <h2>8/17/2020</h2>
 <div id="threshold-run" class="section level3">
 <h3>Threshold Run</h3>
@@ -6000,7 +6669,7 @@ Pugh
 <div id="men-5.04-miles" class="section level4">
 <h4>Men: 5.04 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:22 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -6550,7 +7219,7 @@ Steeley
 <div id="women-3.03-miles" class="section level4">
 <h4>Women: 3.03 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Wed Sep 09 11:44:05 2020 -->
+<!-- Tue Sep 15 07:53:22 2020 -->
 <table border="1">
 <tr>
 <th>
