--- a/index.html
+++ b/index.html
@@ -370,6 +370,465 @@ summary {
 <div id="practice-results" class="section level1 tabset">
 <h1>Practice Results</h1>
 <div id="section" class="section level2">
+<h2>9/19/2020</h2>
+<div id="mock-race-2" class="section level3">
+<h3>Mock Race 2</h3>
+<ul>
+<li>Men: 8k</li>
+<li>Women: 5k</li>
+<li>Legacy Trail: Paved</li>
+<li>Sunny, 55 degrees</li>
+</ul>
+<p>Course were VERY Close to accurate.</p>
+<ul>
+<li><p>Women Top 5 Average: 20:35</p></li>
+<li><p>Women 1-5 Split: 1:54</p></li>
+<li><p>Men Avg Time Record Since I started coaching: 20:29</p></li>
+<li><p>Men Avg Time Record All Time: 19:31</p></li>
+<li><p>Men Top 5 Average: 27:22</p></li>
+<li><p>Men 1-5 Split: 1:06</p></li>
+<li><p>Men Avg Time Record Since I started coaching: 28:29</p></li>
+<li><p>Men Avg Time Record All Time: 27:21</p></li>
+</ul>
+<div id="results" class="section level4">
+<h4>Results</h4>
+<!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
+<!-- Sat Sep 19 11:12:35 2020 -->
+<table border="1">
+<tr>
+<th>
+Name
+</th>
+<th>
+1st Half
+</th>
+<th>
+2nd Half
+</th>
+<th>
+Finish
+</th>
+<th>
+Pace
+</th>
+</tr>
+<tr>
+<td>
+Jodie
+</td>
+<td>
+09:30
+</td>
+<td>
+09:55
+</td>
+<td>
+19:25
+</td>
+<td>
+06:16
+</td>
+</tr>
+<tr>
+<td>
+Rachel
+</td>
+<td>
+09:43
+</td>
+<td>
+10:22
+</td>
+<td>
+20:05
+</td>
+<td>
+06:29
+</td>
+</tr>
+<tr>
+<td>
+Kate
+</td>
+<td>
+10:20
+</td>
+<td>
+10:35
+</td>
+<td>
+20:55
+</td>
+<td>
+06:45
+</td>
+</tr>
+<tr>
+<td>
+Manny
+</td>
+<td>
+10:26
+</td>
+<td>
+10:46
+</td>
+<td>
+21:12
+</td>
+<td>
+06:50
+</td>
+</tr>
+<tr>
+<td>
+Katie
+</td>
+<td>
+10:36
+</td>
+<td>
+10:43
+</td>
+<td>
+21:19
+</td>
+<td>
+06:53
+</td>
+</tr>
+<tr>
+<td>
+Sarah
+</td>
+<td>
+10:39
+</td>
+<td>
+10:48
+</td>
+<td>
+21:27
+</td>
+<td>
+06:55
+</td>
+</tr>
+<tr>
+<td>
+Lan
+</td>
+<td>
+10:53
+</td>
+<td>
+11:05
+</td>
+<td>
+21:58
+</td>
+<td>
+07:05
+</td>
+</tr>
+<tr>
+<td>
+Virginia
+</td>
+<td>
+10:53
+</td>
+<td>
+11:28
+</td>
+<td>
+22:21
+</td>
+<td>
+07:13
+</td>
+</tr>
+<tr>
+<td>
+Ellie
+</td>
+<td>
+11:30
+</td>
+<td>
+11:27
+</td>
+<td>
+22:57
+</td>
+<td>
+07:24
+</td>
+</tr>
+<tr>
+<td>
+Riley
+</td>
+<td>
+11:40
+</td>
+<td>
+12:03
+</td>
+<td>
+23:43
+</td>
+<td>
+07:39
+</td>
+</tr>
+<tr>
+<td>
+India
+</td>
+<td>
+12:18
+</td>
+<td>
+13:40
+</td>
+<td>
+25:58
+</td>
+<td>
+08:23
+</td>
+</tr>
+<tr>
+<td>
+Avery
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+Nick
+</td>
+<td>
+13:34
+</td>
+<td>
+13:20
+</td>
+<td>
+26:54
+</td>
+<td>
+05:25
+</td>
+</tr>
+<tr>
+<td>
+Wyatt
+</td>
+<td>
+13:34
+</td>
+<td>
+13:25
+</td>
+<td>
+26:59
+</td>
+<td>
+05:26
+</td>
+</tr>
+<tr>
+<td>
+Ben
+</td>
+<td>
+13:34
+</td>
+<td>
+13:46
+</td>
+<td>
+27:20
+</td>
+<td>
+05:30
+</td>
+</tr>
+<tr>
+<td>
+Jax
+</td>
+<td>
+13:34
+</td>
+<td>
+14:03
+</td>
+<td>
+27:37
+</td>
+<td>
+05:33
+</td>
+</tr>
+<tr>
+<td>
+Harrison
+</td>
+<td>
+13:40
+</td>
+<td>
+14:20
+</td>
+<td>
+28:00
+</td>
+<td>
+05:38
+</td>
+</tr>
+<tr>
+<td>
+Justin
+</td>
+<td>
+14:01
+</td>
+<td>
+14:01
+</td>
+<td>
+28:02
+</td>
+<td>
+05:38
+</td>
+</tr>
+<tr>
+<td>
+Brad
+</td>
+<td>
+13:51
+</td>
+<td>
+14:37
+</td>
+<td>
+28:28
+</td>
+<td>
+05:44
+</td>
+</tr>
+<tr>
+<td>
+Ike
+</td>
+<td>
+14:13
+</td>
+<td>
+15:33
+</td>
+<td>
+29:46
+</td>
+<td>
+05:59
+</td>
+</tr>
+<tr>
+<td>
+Wes
+</td>
+<td>
+15:50
+</td>
+<td>
+15:31
+</td>
+<td>
+31:21
+</td>
+<td>
+06:18
+</td>
+</tr>
+<tr>
+<td>
+Noah
+</td>
+<td>
+15:18
+</td>
+<td>
+16:20
+</td>
+<td>
+31:38
+</td>
+<td>
+06:22
+</td>
+</tr>
+<tr>
+<td>
+Hayden
+</td>
+<td>
+16:41
+</td>
+<td>
+16:39
+</td>
+<td>
+33:20
+</td>
+<td>
+06:42
+</td>
+</tr>
+<tr>
+<td>
+Blake
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div id="section-1" class="section level2">
 <h2>9/15/2020</h2>
 <div id="practice-park" class="section level3">
 <h3>Practice: Park</h3>
@@ -379,10 +838,10 @@ summary {
 <li>5:30pm, 75 Degrees</li>
 <li>Each lap was 2.0167 miles</li>
 </ul>
-<div id="results" class="section level4">
+<div id="results-1" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:35 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -1038,7 +1497,7 @@ Stanko
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>9/9/2020</h2>
 <div id="practice-east-campus" class="section level3">
 <h3>Practice: East Campus</h3>
@@ -1048,10 +1507,10 @@ Stanko
 <li>6:30am, 66 Degrees</li>
 <li>Each Interval was 1020m, which is about 0.63 miles. This column is a slightly adjusted average to account for this.</li>
 </ul>
-<div id="results-1" class="section level4">
+<div id="results-2" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:35 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2020,7 +2479,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>9/7/2020</h2>
 <div id="practice-scott-co.-park" class="section level3">
 <h3>Practice: Scott Co. Park</h3>
@@ -2030,10 +2489,10 @@ Pugh
 <li>88 Degrees</li>
 <li>“Last Year” is the average for last years workout. Men did 3 sets, women did 2 sets.</li>
 </ul>
-<div id="results-2" class="section level4">
+<div id="results-3" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:35 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2587,7 +3046,7 @@ Davis
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>9/5/2020</h2>
 <div id="mock-race-1" class="section level3">
 <h3>Mock Race 1</h3>
@@ -2608,10 +3067,10 @@ Davis
 <li><p>Men Avg Time Record Since I started coaching: 28:29</p></li>
 <li><p>Men Avg Time Record All Time: 27:21</p></li>
 </ul>
-<div id="results-3" class="section level4">
+<div id="results-4" class="section level4">
 <h4>Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:35 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -2950,7 +3409,7 @@ Wyatt
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-5" class="section level2">
 <h2>9/2/2020</h2>
 <div id="workout" class="section level3">
 <h3>Workout</h3>
@@ -2962,7 +3421,7 @@ Wyatt
 <div id="unadjusted-results" class="section level4">
 <h4>Unadjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:35 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -3630,7 +4089,7 @@ White
 <div id="adjusted-results" class="section level4">
 <h4>Adjusted Results</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -4297,7 +4756,7 @@ White
 </div>
 </div>
 </div>
-<div id="section-5" class="section level2">
+<div id="section-6" class="section level2">
 <h2>8/31/2020</h2>
 <div id="workout-1" class="section level3">
 <h3>Workout</h3>
@@ -4309,7 +4768,7 @@ White
 <div id="men-and-women" class="section level4">
 <h4>Men and Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5002,7 +5461,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-6" class="section level2">
+<div id="section-7" class="section level2">
 <h2>8/26/2020</h2>
 <div id="workout-2" class="section level3">
 <h3>Workout</h3>
@@ -5015,7 +5474,7 @@ Pugh
 <div id="men" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -5469,7 +5928,7 @@ Sheroan
 <div id="women" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -6025,7 +6484,7 @@ Stanko
 </div>
 </div>
 </div>
-<div id="section-7" class="section level2">
+<div id="section-8" class="section level2">
 <h2>8/24/2020</h2>
 <div id="workout-3" class="section level3">
 <h3>Workout</h3>
@@ -6038,7 +6497,7 @@ Stanko
 <div id="men-1" class="section level4">
 <h4>Men</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:21 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -6364,7 +6823,7 @@ Sheroan
 <div id="women-1" class="section level4">
 <h4>Women</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:22 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -6646,7 +7105,7 @@ Pugh
 </div>
 </div>
 </div>
-<div id="section-8" class="section level2">
+<div id="section-9" class="section level2">
 <h2>8/19/2020</h2>
 <div id="fartlek-run" class="section level3">
 <h3>Fartlek Run</h3>
@@ -6659,7 +7118,7 @@ Pugh
 </ul>
 </div>
 </div>
-<div id="section-9" class="section level2">
+<div id="section-10" class="section level2">
 <h2>8/17/2020</h2>
 <div id="threshold-run" class="section level3">
 <h3>Threshold Run</h3>
@@ -6669,7 +7128,7 @@ Pugh
 <div id="men-5.04-miles" class="section level4">
 <h4>Men: 5.04 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:22 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
@@ -7219,7 +7678,7 @@ Steeley
 <div id="women-3.03-miles" class="section level4">
 <h4>Women: 3.03 Miles</h4>
 <!-- html table generated in R 3.6.1 by xtable 1.8-4 package -->
-<!-- Tue Sep 15 07:53:22 2020 -->
+<!-- Sat Sep 19 11:12:36 2020 -->
 <table border="1">
 <tr>
 <th>
